# ChangeLog for dev-libs/dbus-glib
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/dbus-glib/ChangeLog,v 1.43 2008/12/23 22:27:07 cardoe Exp $

*dbus-glib-0.78 (23 Dec 2008)

  23 Dec 2008; Doug Goldstein <cardoe@gentoo.org>
  +files/dbus-glib-0.78-as-needed.patch, +dbus-glib-0.78.ebuild:
  version bump. ebuild from Santiago M. Mola <coldwind@gentoo.org> with
  additional changes for fixing tests and correcting depends by me

  15 Dec 2008; Tobias Klausmann <klausman@gentoo.org> dbus-glib-0.76.ebuild:
  Stable on alpha, bug #250289

  14 Dec 2008; nixnut <nixnut@gentoo.org> dbus-glib-0.76.ebuild:
  Stable on ppc wrt bug 250289

  10 Dec 2008; Markus Meier <maekke@gentoo.org> dbus-glib-0.76.ebuild:
  amd64/x86 stable, bug #250289

  08 Dec 2008; Brent Baude <ranger@gentoo.org> dbus-glib-0.76.ebuild:
  stable ppc64, bug 250289

  08 Dec 2008; Ferris McCormick <fmccor@gentoo.org> dbus-glib-0.76.ebuild:
  Sparc stable, Bug #250289.

*dbus-glib-0.76 (15 Aug 2008)

  15 Aug 2008; Doug Goldstein <cardoe@gentoo.org> -dbus-glib-0.72.ebuild,
  +dbus-glib-0.76.ebuild:
  remove old version. add new version.
  http://lists.freedesktop.org/archives/dbus/2008-June/009898.html

*dbus-glib-0.74-r1 (22 Apr 2008)

  22 Apr 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/dbus-glib-0.73-namespaces.patch, +dbus-glib-0.74-r1.ebuild:
  Add patch for namespace support in dbus-binding-tool

  29 Feb 2008; Jeroen Roovers <jer@gentoo.org> dbus-glib-0.74.ebuild:
  Stable for HPPA (bug #208917).

  29 Feb 2008; Brent Baude <ranger@gentoo.org> dbus-glib-0.74.ebuild:
  stable ppc64, bug 208917

  28 Feb 2008; Santiago M. Mola <coldwind@gentoo.org> dbus-glib-0.74.ebuild:
  amd64 stable wrt bug #208917

  28 Feb 2008; Raúl Porcel <armin76@gentoo.org> dbus-glib-0.74.ebuild:
  alpha/ia64 stable wrt #208917

  28 Feb 2008; nixnut <nixnut@gentoo.org> dbus-glib-0.74.ebuild:
  Stable on ppc wrt bug 208917
