@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/dbus-glib
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/dbus-glib/ChangeLog,v 1.43 2008/12/23 22:27:07 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/dbus-glib/ChangeLog,v 1.44 2008/12/27 16:05:59 cardoe Exp $
+
+  27 Dec 2008; Doug Goldstein <cardoe@gentoo.org> dbus-glib-0.78.ebuild:
+  add gtk-doc-am to DEPEND so that automake successfully runs
 
 *dbus-glib-0.78 (23 Dec 2008)
 
